Styled success modal and fixed modal z-index, moved footer to nav

--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -69,9 +69,11 @@
 .footer-container {
   width: 100%;
   display: flex;
+  z-index: 0;
   justify-content: center;
   position: fixed;
   bottom: -72px;
+  left: 0;
   background: #012a36;
 }
 
