--- a/frontend/src/styles/modal.css
+++ b/frontend/src/styles/modal.css
@@ -2,6 +2,7 @@
   left: 0;
   top: 0;
   position: fixed;
+  z-index: 100;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.8);
@@ -30,13 +31,38 @@
 }
 
 .success-modal-main {
-  width: 600px;
-  position: absolute;
-  background: white;
-  height: 250px;
+  width: 160px;
+  height: 80px;
+  position: fixed;
+  background: #a2d3c2;
+  color: white;
+  font-size: 30px;
+  font-weight: 900;
+  display: flex;
+  z-index: 700;
+  justify-content: center;
+  align-items: center;
   top:42%;
   left:50%;
   transform: translate(-50%,-50%);
   border-radius: 5px;
   z-index: 100;
+}
+
+.success-modal-message {
+  text-align: center;
+}
+
+.success-modal-x {
+  position: absolute;
+  font-weight: 900;
+  color: white;
+  top: 2px;
+  right: 4px;
+  background: none;
+  font-size: 20px;
+}
+
+.success-modal-x:hover {
+  cursor: pointer;
 }
